# intro2fastapi

./: .gitignore  README.md  pyproject.toml
intro2fastapi/api/: app.py
intro2fastapi/models/: training.py
